--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,7 +17,8 @@
 
 .header__title {
   place-self: center;
-  font-size: 60px;
+  font-size: 100px;
+  margin: 0;
 }
 
 .header__title-safety {
@@ -45,6 +46,7 @@
 }
 
 .header__btn-wrap {
+  margin-right: 5rem;
 }
 
 .header__btn {
@@ -54,10 +56,13 @@
   border: none;
   cursor: pointer;
   font-weight: 500;
-  transition: all 0.3s ease;
   background-color: transparent;
   border: 1px solid #fff;
   color: #fff;
+}
+
+.header__btn_add {
+  padding: 8px;
 }
 
 .header__btn:hover {
