--- a/src/components/MaterialCard/MaterialCard.css
+++ b/src/components/MaterialCard/MaterialCard.css
@@ -1,4 +1,5 @@
 .material-card {
+  position: relative;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   display: flex;
   flex-direction: column;
@@ -9,6 +10,29 @@
   margin-left: 20px;
   margin-top: 20px;
   border-radius: 10%;
+}
+
+.material-card__delete-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: black;
+  border: none;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  font-size: 30px;
+  line-height: 1;
+  color: darkred; /* Matches your card background color */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.material-card__delete-button:hover {
+  background: gray;
+  transform: scale(1.1);
 }
 
 .material-card__name {
