--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,7 @@
 .profile {
   padding: 20px;
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .profile__container {
@@ -11,12 +11,14 @@
 }
 
 .profile__content {
-  padding: 20px;
+  padding: 0;
 }
 
 .profile__title {
-  margin: 0 0 20px;
+  margin: 0;
+  margin-left: 20px;
   font-size: 24px;
+  color: white;
 }
 
 .profile__materials {
