--- a/src/components/RegisterModal/RegisterModal.css
+++ b/src/components/RegisterModal/RegisterModal.css
@@ -31,3 +31,9 @@
   transform: translateY(2px); /* Slight lift effect */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
 }
+
+@media screen and (max-width: 425px) {
+  .RegisterModal__content {
+    width: 250px;
+  }
+}
