--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,19 +1,24 @@
-.about-container {
+.About {
   color: white;
 }
-.about-container {
+
+.About__header {
+  text-align: center;
+}
+
+.About__container {
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
 }
 
-.about-container h1 {
+.About__container h1 {
   color: white;
   text-align: center;
   margin-bottom: 30px;
 }
 
-.about-section {
+.About__section {
   background: #880202;
   border-radius: 8px;
   padding: 20px;
@@ -21,40 +26,40 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.about-paragraph {
+.About__paragraph {
   font-size: 20px;
   line-height: 1.6;
 }
-.about-section h2 {
+.About__section h2 {
   color: white;
   border-bottom: 2px solid #3498db;
   padding-bottom: 10px;
   margin-bottom: 20px;
 }
 
-.about-section h3 {
+.About__section h3 {
   margin: 20px 0 10px 0;
 }
 
-.about__list-item {
+.About__list-item {
   margin-bottom: 10px;
   font-size: 20px;
 }
-.rating-explanations ul {
+.About__rating-explanations ul {
   list-style-type: none;
   padding-left: 0;
 }
 
-.rating-explanations li {
+.About__rating-explanations li {
   padding: 8px 0;
   border-bottom: 1px solid #eee;
 }
 
-.rating-explanations li:last-child {
+.About__rating-explanations li:last-child {
   border-bottom: none;
 }
 
-.rating-explanations strong {
+.About__rating-explanations strong {
   display: inline-block;
   width: 25px;
   height: 25px;
@@ -66,20 +71,30 @@
 }
 
 /* Color coding for HMIS sections */
-.rating-explanations h3:nth-child(1) strong {
+.About__rating-explanations h3:nth-child(1) strong {
   /* Health Hazard */
   background-color: #3498db;
   color: white;
 }
 
-.rating-explanations h3:nth-child(3) strong {
+.About__rating-explanations h3:nth-child(3) strong {
   /* Flammability */
   background-color: #e74c3c;
   color: white;
 }
 
-.rating-explanations h3:nth-child(5) strong {
+.About__rating-explanations h3:nth-child(5) strong {
   /* Physical Hazard */
   background-color: #f39c12;
   color: white;
+}
+
+@media screen and (max-width: 425px) {
+  .About__section h2 {
+    font-size: 24px;
+  }
+
+  .About__paragraph {
+    font-size: 18px;
+  }
 }
