--- a/src/components/ConfirmationModal/ConfirmationModal.css
+++ b/src/components/ConfirmationModal/ConfirmationModal.css
@@ -1,4 +1,4 @@
-.confirmation-modal {
+.ConfirmationModal {
   color: white;
   position: fixed;
   top: 0;
@@ -14,13 +14,13 @@
   transition: visibility 0s linear 0.3s, opacity 0.3s linear;
 }
 
-.confirmation-modal_opened {
+.ConfirmationModal_opened {
   visibility: visible;
   opacity: 1;
   transition-delay: 0s;
 }
 
-.confirmation-modal__container {
+.ConfirmationModal__container {
   background-color: #7b0000;
   padding: 30px;
   border-radius: 10px;
@@ -30,7 +30,7 @@
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
 }
 
-.confirmation-modal__close-button {
+.ConfirmationModal__close-button {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -42,8 +42,8 @@
   height: 20px;
 }
 
-.confirmation-modal__close-button::before,
-.confirmation-modal__close-button::after {
+.ConfirmationModal__close-button::before,
+.ConfirmationModal__close-button::after {
   content: "";
   position: absolute;
   top: 10px;
@@ -53,27 +53,27 @@
   background-color: #000;
 }
 
-.confirmation-modal__close-button::before {
+.ConfirmationModal__close-button::before {
   transform: rotate(45deg);
 }
 
-.confirmation-modal__close-button::after {
+.ConfirmationModal__close-button::after {
   transform: rotate(-45deg);
 }
 
-.confirmation-modal__text {
+.ConfirmationModal__text {
   text-align: center;
   margin: 0 0 30px;
   font-size: 18px;
 }
 
-.confirmation-modal__buttons {
+.ConfirmationModal__buttons {
   display: flex;
   justify-content: center;
   gap: 20px;
 }
 
-.confirmation-modal__button {
+.ConfirmationModal__button {
   padding: 8px 20px;
   border-radius: 4px;
   border: none;
@@ -82,16 +82,22 @@
   transition: opacity 0.3s;
 }
 
-.confirmation-modal__button:hover {
+.ConfirmationModal__button:hover {
   opacity: 0.8;
 }
 
-.confirmation-modal__button_type_confirm {
+.ConfirmationModal__button_type_confirm {
   background-color: #e67e22;
   color: white;
 }
 
-.confirmation-modal__button_type_cancel {
+.ConfirmationModal__button_type_cancel {
   background-color: #e67e22;
   color: white;
+}
+
+@media screen and (max-width: 425px) {
+  .ConfirmationModal__container {
+    max-width: 200px;
+  }
 }
