--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,4 +1,4 @@
-.modal {
+.ModalWithForm {
   position: fixed;
   top: 0;
   left: 0;
@@ -11,17 +11,17 @@
   z-index: 1000;
 }
 
-.modal_opened {
+.ModalWithForm_opened {
   display: flex;
 }
 
-.modal__title {
+.ModalWithForm__title {
   font-size: 28px;
   margin-top: 5px;
   color: white;
 }
 
-.modal__close {
+.ModalWithForm__close {
   color: white;
   background-color: black;
   position: absolute;
@@ -33,15 +33,25 @@
   border: double 1px black;
 }
 
-.modal__close:hover {
+.ModalWithForm__close:hover {
   border: double 1px gray;
 }
 
-.modal__content {
+.ModalWithForm__content {
   background-color: darkred;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 500px;
   position: relative;
+}
+
+/* Mobile styles - 325px and below */
+@media screen and (max-width: 425px) {
+  .ModalWithForm__content {
+    max-width: 320px;
+  }
+  .ModalWithForm__title {
+    font-size: 20px;
+  }
 }
