--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -17,29 +17,40 @@
   display: block;
   transition: all 0.3s ease;
   font-size: 16px;
-  position: relative; /* This helps position the arrow */
-  padding-left: 2.25rem; /* Make space for the arrow */
+  position: relative;
+  padding-left: 2.25rem;
 }
 
 .navigation__link::before {
-  content: "⟶"; /* This adds the arrow */
+  content: "⟶";
   position: absolute;
   top: 2px;
-  left: 1rem; /* Position it on the left */
+  left: 1rem;
   right: 1rem;
-  opacity: 0; /* Hide it by default */
+  opacity: 0;
   transform: translateX(-10px);
   transition: all 0.3s ease;
 }
 
 .navigation__link:hover {
-  color: red; /* Blue color on hover */
-  transform: translateX(1px); /* Slight shift to the right on hover */
-
+  color: red;
+  transform: translateX(1px);
   border-radius: 4px;
 }
 
 .navigation__link:hover::before {
-  opacity: 1; /* Show the arrow */
-  transform: translateX(0); /* Slide it in */
+  opacity: 1;
+  transform: translateX(0);
+}
+
+@media screen and (max-width: 768px) {
+  .navigation__link::before {
+    left: -1rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .navigation__item:nth-child(3) {
+    margin-bottom: 10px;
+  }
 }
